scss/partials/_user_notifications.scss
div.user-notifications {
  position: relative;

  @include mobile() {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: transparent;
    z-index: 21;
    overflow-y: auto;
    margin-top: #{$mobile_navbar_height}px;
    background-color: $grey_num_2;

    button.notification-bell-bt {
      display: none;
    }
  }

  button.notification-bell-bt {
    width: 32px;
    height: 32px;
    background-image: cdnUrl("/img/ML/notification_bell.svg");
    background-size: 32px 32px;
    background-position: 0px;
    background-repeat: no-repeat;
    position: relative;
    padding: 0;
    margin: 0;

    // &.active {
    //   background-image: cdnUrl("/img/ML/notification_bell_active.svg");    
    // }

    &.new:after {
      position: absolute;
      content: "";
      width: 12px;
      height: 12px;
      top: 0px;
      right: 0px;
      background-color: $carrot_green;
      border-radius: 50%;
      border: 2px solid $grey_num_2;
    }
  }

  div.user-notifications-tray {
    position: absolute;
    top: 31px;
    right: 0px;
    background-color: white;
    border-radius: 4px;
    border: 1px solid $deep_tan;
    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.07);;
    width: 375px;

    &.hidden-tray {
      top: -99999px;
      right: -99999px;
    }

    @include mobile() {
      position: relative;
      top: unset;
      right: unset;
      width: 100%;
      box-shadow: none;
      border: none;
      height: 100%;
      background-color: white;

      &.hidden-tray {
        top: unset;
        right: unset;
      }
    }

    div.user-notifications-tray-header {
      padding: 16px;
      position: relative;

      @include mobile(){
        display: none;
      }

      button.user-notifications-tray-mobile-close {
        display: none;

        @include mobile() {
          display: block;
          width: 24px;
          height: 24px;
          background-image: cdnUrl("/img/ML/mobile_close_x.svg");
          background-position: center;
          background-repeat: no-repeat;
          background-size: 14px 14px;
          position: absolute;
          top: 12px;
          right: 11px;
        }
      }

      button.notification-settings-bt {
        position:absolute;
        top: 12px;
        right: 12px;
        width: 24px;
        height: 24px;
        background-image: cdnUrl("/img/ML/notification_settings_bt.svg");
        background-position: center;
        background-repeat: no-repeat;
        background-size: 15px 16px;
      }

      div.title {
        @include OC_Body_Book();
        color: $deep_navy;
        font-size: 14px;
        text-align: center;
        width: 100px;
        margin: 0 auto;
        line-height: 20px;
        height: 18px;
        line-height: 18px;

        @include mobile() {
          font-size: 16px;
        }
      }

      button.all-read-bt {
        position:absolute;
        top: 12px;
        left: 12px;
        height: 24px;
        width: 24px;
        padding: 0px;
        margin: 0px;
        background-image: cdnUrl("/img/ML/notifications_mark_all_read.svg");
        background-size: 14px 14px;
        background-position: center;
        background-repeat: no-repeat;
      }
    }

    div.user-notifications-tray-list {
      max-height: calc(90vh - 100px);
      overflow-y: auto;
      overflow-x: hidden;

      @include mobile() {
        min-height: 100%;
        max-height: initial;
      }

      div.user-notifications-tray-empty {
        @include mobile() {
          div.all-caught-up {
            display: block !important;
            margin-top: 100px;
          }
        }
      }

      div.user-notification {
        border-top: 1px solid $ultra_light_grey;
        padding: 16px 16px 13px;
        cursor: pointer;
        text-align: left;
        opacity: 0.9;
        position: relative;
        background-color: $oc_gray_8;

        @include mobile() {
          &:first-child {
            border-top: none;
          }
        }

        &:hover {
          button.read-bt {
            display: block;
          }
        }

        &:last-child {
          border-bottom-left-radius: 6px;
          border-bottom-right-radius: 6px;
        }

        &.unread {
          background-color: white;
        }

        @include user-profile(24);

        div.user-avatar-img-container {
          float: left;
        }

        div.user-notification-title {
          margin-left: 16px;
          float: left;
          width: calc(100% - 24px - 16px - 42px);
          padding-right: 8px;
          @include OC_Body_Book();
          font-size: 14px;
          line-height: 16px;
          color: $deep_navy;
          float: left;
        }

        div.user-notification-time-since {
          float: right;
          text-align: right;
          width: 42px;
          @include OC_Body_Book();
          font-size: 12px;
          color: rgba($ui_grey, 0.5);
          height: 12px;
          line-height: 12px;
        }

        div.user-notification-body {
          margin-left: 16px;
          margin-top: 4px;
          width: calc(100% - 40px);
          padding-right: 8px;
          @include OC_Body_Book();
          font-size: 14px;
          line-height: 18px;
          color: #848D95;
          float: right;
          overflow-wrap: break-word;

          p {
            margin: 0px;
            padding: 0px;
          }

          a {
            color: $carrot_green;
          }

          img {
            display: none;
          }
        }

        button.read-bt {
          position: absolute;
          right: 4px;
          top: 50%;
          float: right;
          margin-top: -12px;
          width: 24px;
          height: 24px;
          background-image: cdnUrl("/img/ML/notification_read_bt.svg");
          background-size: 8px 8px;
          background-position: center;
          background-repeat: no-repeat;
          display: none;
        }
      }
    }
  }
}

